WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131491
[CSS Shapes] shape-outside from image doesn't load properly
https://bugs.webkit.org/show_bug.cgi?id=131491
Summary
[CSS Shapes] shape-outside from image doesn't load properly
Hans Muller
Reported
2014-04-10 07:53:18 PDT
Sometimes the content surrounding IMG elements with shape-outside specified isn't laid out correctly. First reported for Blink, see:
https://codereview.chromium.org/226203010
Attachments
Patch
(5.98 KB, patch)
2014-04-10 13:41 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
Patch
(4.20 KB, patch)
2014-04-10 20:34 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hans Muller
Comment 1
2014-04-10 13:41:40 PDT
Created
attachment 229077
[details]
Patch Corrected some problems related to shape-outside image loading for IMG elements
Hans Muller
Comment 2
2014-04-10 20:34:50 PDT
Created
attachment 229100
[details]
Patch Removed extraneous cleanup logic (from the original patch) from RenderBox.
Bem Jones-Bey
Comment 3
2014-04-11 14:13:26 PDT
Comment on
attachment 229100
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2014-04-11 14:27:40 PDT
Comment on
attachment 229100
[details]
Patch Clearing flags on attachment: 229100 Committed
r167150
: <
http://trac.webkit.org/changeset/167150
>
WebKit Commit Bot
Comment 5
2014-04-11 14:27:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug