[CSS Shapes] shape-outside from image doesn't load properly https://bugs.webkit.org/show_bug.cgi?id=131491

Reviewed by Bem Jones-Bey.

Source/WebCore:

Make RenderImage::imageChanged() call super if there's a shape-outside
image because the shape-outside imageChanged() logic is in RenderBox.

Test: http/tests/css/shape-image-file.html

* rendering/RenderElement.h:
(WebCore::RenderElement::hasShapeOutside):
* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageChanged):

LayoutTests:

* http/tests/css/shape-image-file-expected.html: Added.
* http/tests/css/shape-image-file.html: Added.


Canonical link: https://commits.webkit.org/149622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167150 268f45cc-cd09-0410-ab3c-d52691b4dbfc